--- a/css/sweetalert2.css
+++ b/css/sweetalert2.css
@@ -704,3 +704,6 @@ body.swal2-iosfix {
   100% {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg); } }
+
+
+            /*gabiiiii*/
